--- a/template.html
+++ b/template.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>瑞时会-只珍藏顶级腕表和你</title>
-    <meta name="renderer" content="webkit">
-    <meta name = "format-detection" content = "telephone=no">
-    <link rel="shortcut icon" href="./source/icon.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <!--redflagintel-->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>瑞时会-只珍藏顶级腕表和你</title>
+  <meta name="renderer" content="webkit">
+  <meta name = "format-detection" content = "telephone=no">
+  <link rel="shortcut icon" href="/source/icon.ico" type="image/x-icon" />
+  <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112072640-1"></script>
+  <script>
+//    window.dataLayer = window.dataLayer || [];
+//    function gtag(){dataLayer.push(arguments);}
+//    gtag('js', new Date());
+//
+//    gtag('config', 'UA-112072640-1');
+  </script>
+  <script>
+//    var _hmt = _hmt || [];
+//    (function() {
+//      var hm = document.createElement("script");
+//      hm.src = "https://hm.baidu.com/hm.js?d3ac3603d245ed0032e2444975fef269";
+//      var s = document.getElementsByTagName("script")[0];
+//      s.parentNode.insertBefore(hm, s);
+//    })();
+  </script>
+  <script src="config/common.js"></script>
+</head>
+<body>
+<div id="app"></div>
+</body>
 </html>
